<resources>
    <string name="app_name">Geekspad</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="SignUp_Link">No account yet? Create one</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="birthdate">Birthdate</string>
    <string name="phone">Phone</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="skills">Skills</string>

    <!-- Strings added by Kaliraj -->
    <string name="done">Done</string>
    <string name="prompt_username">Username/Nickname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_pick_location">Map</string>
    <string name="title_activity_test">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dummy">Map</string>
</resources>
