<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sreer.geekspad.ProfileDisplayFragment">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/signup_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_email_data" />

            <TextView
                android:text="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_password" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_password_data" />

            <TextView
                android:text="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_phone_data" />

            <TextView
                android:text="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_gender" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_gender_data" />

            <TextView
                android:text="@string/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_birthdate" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_birthdate_data" />

            <TextView
                android:text="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_country" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_country_data" />

            <TextView
                android:text="@string/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_state" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_state_data" />

            <TextView
                android:text="@string/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_city" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView_city_data" />

            <Button
                android:id="@+id/Button_edit"
                android:layout_marginTop="20dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/edit" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>
